--- a/freelancer4u-frontend/package.json
+++ b/freelancer4u-frontend/package.json
@@ -19,6 +19,7 @@
     "svelte": "^3.48.0"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.13.2",
     "axios": "^1.1.3",
     "sirv-cli": "^2.0.2",
     "svelte-spa-router": "^3.2.0"
