--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.dt0zj.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=freelancer
+
+auth0.domain=dev-2ofkkrikbf7ji0pl.us.auth0.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
