--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,14 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ch.zhaw.freelancer4u</groupId>
-	<artifactId>freelancer4u</artifactId>
+	<artifactId>freelancer4u1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>freelancer4u</name>
+	<name>freelancer4u1</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>rahulzhaw</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 
